--- a/app/globals.css
+++ b/app/globals.css
@@ -18,10 +18,19 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+.main{
+  position: absolute;
+  top: 400px;
+  left: 50%;
+  transform: translate(-50%,-50%);
 }
